--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "graphaware/neo4j-php-ogm",
+    "name": "amiriskander/neo4j-php-ogm",
     "description": "PHP Object Graph Mapper for Neo4j",
     "license": "Apache-2.0",
     "keywords": [
@@ -12,16 +12,19 @@
         "database",
         "cypher"
     ],
-    "homepage": "https://github.com/graphaware/neo4j-php-ogm",
+    "homepage": "https://github.com/amiriskander/neo4j-php-ogm",
     "authors": [{
         "name": "Christophe Willemsen",
         "email": "christophe@graphaware.com"
     }, {
         "name": "GraphAware Ltd",
         "email": "php@graphaware.com"
+    }, {
+        "name": "Amir Iskander",
+        "email": "amir@amiriskander.com"
     }],
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^7.0",
         "doctrine/annotations": "^1.2",
         "doctrine/collections": "^1.3",
         "doctrine/common": "^2.6",
